# safe-cargo

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: read-ssh-key.rs  write-to-homedir.rs
src/: lib.rs  main.rs  profile.sb
tests/: cli.rs
tests/negative/: cargo-config-with-safe-alias.toml  custom-cargo-config.stderr  custom-cargo-config.toml  read-ssh-key.stderr  read-ssh-key.toml  write-to-homedir.toml
tests/positive/: build.stderr  build.toml  run-from-different-dir.toml  run.toml
