[package]
name = "safe-cargo"
version = "0.1.3"
edition = "2024"
authors = ["Denis Bazhenov <dotsid@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Build and runs code in a sandboxed environment"
repository = "https://github.com/bazhenov/safe-cargo"
documentation = "https://github.com/bazhenov/safe-cargo"
keywords = ["cargo", "subcommand"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = {version = "4.5.53", features = ["cargo"] }
nix = { version = "0.30.1", features = ["term"] }

[dev-dependencies]
indoc = "2.0.7"
trycmd = "0.15.11"
